RESOLVED FIXED43368
Cache JSNPObjects and fix bugs in the object map
https://bugs.webkit.org/show_bug.cgi?id=43368
Summary Cache JSNPObjects and fix bugs in the object map
Anders Carlsson
Reported 2010-08-02 11:13:04 PDT
Cache JSNPObjects and fix bugs in the object map
Attachments
Patch (25.93 KB, patch)
2010-08-02 11:18 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2010-08-02 11:18:59 PDT
WebKit Review Bot
Comment 2 2010-08-02 11:22:05 PDT
Attachment 63241 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKitTools/DumpRenderTree/TestNetscapePlugIn/Tests/NPRuntimeObjectFromDestroyedPlugin.cpp:26: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 16 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2010-08-02 11:28:31 PDT
Note You need to log in before you can comment on or make changes to this bug.