Cache JSNPObjects and fix bugs in the object map https://bugs.webkit.org/show_bug.cgi?id=43368

Reviewed by Sam Weinig.

WebKit2:

* WebProcess/Plugins/JSNPObject.cpp:
(WebKit::JSNPObject::JSNPObject):
Assert that we're not trying to wrap an NPJSObject.

(WebKit::JSNPObject::~JSNPObject):
Tell the object map that we're gone.

(WebKit::JSNPObject::invalidate):
Release the NPObject and null out the pointer.

* WebProcess/Plugins/NPJSObject.cpp:
(WebKit::NPJSObject::create):
Assert that we're not trying to wrap a JSNPObject.

* WebProcess/Plugins/NPRuntimeObjectMap.cpp:
(WebKit::NPRuntimeObjectMap::getOrCreateNPObject):
If we're passed a JSNPObject, just extract its NPObject.

(WebKit::NPRuntimeObjectMap::getOrCreateJSObject):
If we're passed an NPJSObject, just extract its JSObject. Otherwise, check if we already have
a JSObject for this NPObject and return it.

(WebKit::NPRuntimeObjectMap::jsNPObjectDestroyed):
Remove the object from the map.

(WebKit::NPRuntimeObjectMap::convertNPVariantToJSValue):
getOrCreateJSObject now checks for wrapped objects.

(WebKit::NPRuntimeObjectMap::convertJSValueToNPVariant):
getOrCreateNPObject now checks for wrapped objects.

(WebKit::NPRuntimeObjectMap::invalidate):
Invalidate JSNPObjects as well.

WebKitTools:

Test that we correctly throw exceptions when trying to do things to a JSObject that used to
wrap an NPObject that came from a plug-in that is now destroyed.

* DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj:
* DumpRenderTree/TestNetscapePlugIn/PluginTest.h:
(PluginTest::Object::getProperty):
(PluginTest::Object::NP_GetProperty):
(PluginTest::Object::npClass):
* DumpRenderTree/TestNetscapePlugIn/Tests/NPRuntimeObjectFromDestroyedPlugin.cpp: Added.
(NPRuntimeObjectFromDestroyedPlugin::NPRuntimeObjectFromDestroyedPlugin):
(NPRuntimeObjectFromDestroyedPlugin::ScriptableObject::hasProperty):
(NPRuntimeObjectFromDestroyedPlugin::ScriptableObject::getProperty):
(NPRuntimeObjectFromDestroyedPlugin::NPP_GetValue):
* DumpRenderTree/TestNetscapePlugIn/win/TestNetscapePlugin.vcproj:
* DumpRenderTree/qt/TestNetscapePlugin/TestNetscapePlugin.pro:
* GNUmakefile.am:

LayoutTests:

* plugins/npruntime/object-from-destroyed-plugin-expected.txt: Added.
* plugins/npruntime/object-from-destroyed-plugin.html: Added.

Canonical link: https://commits.webkit.org/55301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64479 268f45cc-cd09-0410-ab3c-d52691b4dbfc