WebKit2/WebProcess/Plugins/NPRuntimeObjectMap.h
@@ -79,7 +79,8 @@ public:
 private:
     PluginView* m_pluginView;
 
-    HashMap<JSC::JSObject*, NPJSObject*> m_objects;
+    HashMap<JSC::JSObject*, NPJSObject*> m_npJSObjects;
+    HashMap<NPObject*, JSNPObject*> m_jsNPObjects;
 };
 
 } // namespace WebKit
